@@ -1,5 +1,13 @@
 2009-09-13  Richard Sandiford  <rdsandiford@googlemail.com>
 
+	* gas/mips/jalr2.s, gas/mips/jalr2.d: New test.
+	* gas/mips/jal-svr4pic.d: Don't expect R_MIPS_JALRs to be reduced.
+	* gas/mips/jal-xgot.d: Likewise.
+	* gas/mips/mips-abi32-pic2.d: Likewise.
+	* gas/mips/mips.exp: Run it.
+
+2009-09-13  Richard Sandiford  <rdsandiford@googlemail.com>
+
 	* gas/mips/mips16-dwarf2-n32.d: Expect odd addresses.
 
 2009-09-11  Hans-Peter Nilsson  <hp@bitrange.com>
